--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html style="height: 100%;"><head><meta name="viewport" content="width=device-width, minimum-scale=0.1"><title>JoSeS</title></head><body>
  <h1>
-    ¡Bienvenido a JoSeS Web Page!
+    Esta es la wiki de JoSeS
 </h1>
-<p>
-JoSeS es un chico de 15 años Que hace ytph y NoSeS
-</p>   
+<a href="https://josesweb.github.io/ytph/">Origenes en ytph</a>   
+
 </body></html>
